Bug 247062 - WPE: Tentative build fix for the Ubuntu LTS bot
Summary: WPE: Tentative build fix for the Ubuntu LTS bot
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Claudio Saavedra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-26 05:53 PDT by Claudio Saavedra
Modified: 2022-10-26 08:15 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudio Saavedra 2022-10-26 05:53:24 PDT
wl_pointer::axis_value120 was only defined in version 8 of the protocols.
Comment 1 EWS 2022-10-26 08:15:39 PDT
Committed 256015@main (8db30a2f05dd): <https://commits.webkit.org/256015@main>

Reviewed commits have been landed. Closing PR #5812 and removing active labels.