WPE: Tentative build fix for the Ubuntu LTS bot https://bugs.webkit.org/show_bug.cgi?id=247062

Reviewed by Michael Catanzaro.

wl_pointer::axis_value120 was only defined in version 8,
it seems that the Ubuntu LTS bot has an older version of
the wayland protocols.

* Tools/wpe/backends/fdo/WindowViewBackend.cpp:

Canonical link: https://commits.webkit.org/256015@main